--- a/Pages/Code_Stylesheets/About_Card.css
+++ b/Pages/Code_Stylesheets/About_Card.css
@@ -14,10 +14,8 @@
   -webkit-backdrop-filter: blur(3em);
   backdrop-filter: blur(3em);
   box-shadow: 0em 0.1em 0.5em 0.01em rgba(0,0,0,0.1);
-  opacity: 0;
-  /* transform: scale(0); */
-  transform: translateY(calc(50vh + var(--Height)));
-  transition: 0.5s ease;
+  transform: scale(0);
+  transition: 0.1s ease;
   font-size: min(2vw,20px);
   display: grid;
   grid-template-columns: 2.2fr 1fr 1fr 0.25fr;
@@ -27,10 +25,8 @@
 } 
 
 .Show_About_Card{
-  opacity: 1;
-  transform: translateY(0);
-  /* transform: scale(1); */
-  transition: 0.2s ease;
+  transform: scale(1);
+  transition: 0.1s ease;
 }
 
 .About_Details{
