Spectrum Analyzer Microphone Function

--- a/Pages/Code_Stylesheets/Widgets_Card.css
+++ b/Pages/Code_Stylesheets/Widgets_Card.css
@@ -29,8 +29,8 @@
   overflow: scroll;
   z-index: 20;
   filter: opacity(0);
-  transform: translateX(0);
-  filter: opacity(1);
+  /* transform: translateX(0);
+  filter: opacity(1); */
 }
 
 .Widgets_Glass_Background{
