--- a/Pages/Code_Stylesheets/Spectrum_Analyzer_Widget.css
+++ b/Pages/Code_Stylesheets/Spectrum_Analyzer_Widget.css
@@ -2,7 +2,7 @@
 #Spectrum_Analyzer_Widget{
   position: relative;
   grid-column: 1 / span 2;
-  background: linear-gradient(180deg, #434343 -30.4%, #2B2B2B 105.99%);
+  background: linear-gradient(180deg, #2B2B2B -30.4%, #2B2B2B 105.99%);
 }
 
 #Spectrum_Analyzer_Inset{
@@ -47,46 +47,6 @@
 
 .Frequency_Labels:nth-last-child(1){
   padding-left: 0.5rem;
-}
-
-.Bar_Containers{
-  display: grid;
-  grid-gap: 0.15rem;
-}
-
-.LED_Bars{
-  background-color: rgba(255,255,255,0.2);
-  border-radius: 0.18rem;
-  box-shadow: inset 0 0.1rem 0.1rem 0.02rem rgba(0,0,0,0.3);
-}
-
-.Bars_7{
-  background-color: rgba(255,70,70,1);
-  background-color: rgba(0,200,195);
-}
-.Bars_6{
-  background-color: rgba(255,90,30,1);
-  background-color: rgba(0,200,195);
-}
-.Bars_5{
-  background-color: rgba(0,180,50,1);
-  background-color: rgba(0,200,195);
-}
-.Bars_4{
-  background-color: rgba();
-  background-color: rgba(0,200,195);
-}
-.Bars_3{
-  background-color: rgba(170,210,70,1);
-  background-color: rgba(0,200,195);
-}
-.Bars_2{
-  background-color: rgba(170,210,70,1);
-  background-color: rgba(0,200,195);
-}
-.Bars_1{
-  background-color: rgba(0,220,50,1);
-  background-color: rgba(0,200,195);
 }
 
 #Controls_Container{
@@ -241,6 +201,36 @@
   50%{transform: scale(1.1);}
   100%{transform: scale(1);}
 }
+
+.Bar_Containers{
+  display: grid;
+  grid-gap: 0.15rem;
+}
+
+.LED_Bars{
+  background-color: rgba(0,200,195,0.1);
+  border-radius: 0.18rem;
+  box-shadow: inset 0 0.05rem 0.1rem 0.02rem rgba(0,0,0,0.2);
+  /* transition: 0.02s; */
+}
+
+.LED_Bars_On{
+  background-color: rgba(0,200,195,1);
+  filter: brightness(2);
+  box-shadow: 0 0 1rem 0 rgba(0,200,195,1);
+}
+
+#Music_Visualizer_Label{
+  display: flex;
+  grid-column: 1 / span 6;
+  font-size: 0.5rem;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: rgba(100,100,100,1);
+  font-weight: bold;
+}
+
 
 
 
