--- a/Pages/Code_Stylesheets/Control_Center_Card.css
+++ b/Pages/Code_Stylesheets/Control_Center_Card.css
@@ -151,6 +151,7 @@
   grid-row: 3 / span 2;
   grid-column: 7 / span 2;
   overflow: hidden;
+  transition: 0.15s;
 }
 
 #Control_Center_Screen_Mirroring_Icon{
@@ -257,15 +258,19 @@ input::-webkit-inner-spin-button {
   width: calc(100% - 1.6em - 0.6em - 0.6em);
 }
 
-#Audio_Selector{
+.Audio_Selector{
   position: absolute;
-  background-color: blue; 
   bottom: 0;
   right: 0.35em;
   aspect-ratio: 1 / 1;
   height: 1.6em;
   border-radius: 100%;
   background-color: rgba(0,0,0,0.1);  
+  transition: 0.2s;
+}
+
+#Audio_Selector_Icon,#Audio_Selector_Icon_Part_2{
+  transition: 0.2s;
 }
 
 #Control_Center_Audio_Selector_Icon{
@@ -275,6 +280,7 @@ input::-webkit-inner-spin-button {
   width: var(--Diameter);
   top: calc(55% - var(--Diameter)/2);
   left: calc(50% - var(--Diameter)/2);
+  transition: 0.2s;
 }
 
 #Music_Player_Container{
@@ -346,6 +352,7 @@ input::-webkit-inner-spin-button {
   grid-row: 11 / span 1;
   grid-column: 4 / span 2;
   width: calc(1.6em * 1.6);
+  transition: 0.2s;
 }
 
 #Control_Center_Accessibility_Icon{
@@ -410,15 +417,29 @@ input::-webkit-inner-spin-button {
   to{transform: rotate(360deg);}
 }
 
-
-@keyframes Cover_Flow_Keyframes {
-  0%{}
-  100%{}
+#Keyboard_Brightness_Meter{
+  --Margin: 0rem;
+  position: absolute;
+  height: calc(100% - 2 * var(--Margin));
+  width: calc(100% - 2 * var(--Margin));
+  top: var(--Margin);
+  left: var(--Margin);
+  border-radius: 0.5rem;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 50%, rgba(255,255,255,0.85) 50%);
+  background-size: 100% 200%;
+  background-position:  0% 0%;  
+  transition: 0.2s;
 }
 
+.Toggle_Screen_Mirroring{
+  background-color: rgba(255,255,255,0.85);
+  transition: 0.2s;
+}
 
-
-
+.Toggle_Audio_Selector{
+  background-color: rgba(59,115,242); 
+  transition: 0.2s;
+}
 
 
 
