Control Centre Updates

--- a/Pages/Code_Stylesheets/Control_Center_Card.css
+++ b/Pages/Code_Stylesheets/Control_Center_Card.css
@@ -308,6 +308,9 @@ input::-webkit-inner-spin-button {
 
 #Play_Button{
   background-size: 60% 50%;
+}
+
+.Play_Button{
   background-image: url('../../Assets/Play.svg');
 }
 
