--- a/Stylesheets_Design_My_Compass/Window.css
+++ b/Stylesheets_Design_My_Compass/Window.css
@@ -3,11 +3,8 @@
   --Tile_Margin: 3vw;
   --Maximum_Size: 24rem;
   --Minimum_Size: 18rem;
-  --Tile_Width: calc((90vw - (4 * var(--Tile_Margin)))/3);
-  
-  
+  --Tile_Width: calc((90vw - (4 * var(--Tile_Margin)))/3);  
 }
-
 
 html, body{
   background: #070D20;
@@ -30,11 +27,14 @@ html, body{
   -webkit-background-clip: text;
   color: transparent;
   text-align: center;
-  margin-top: 7rem;
+  margin-top: 6rem;
   padding: 2rem;
   box-sizing: border-box;
   pointer-events: none;
   text-decoration: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #Container{
@@ -46,8 +46,7 @@ html, body{
   margin: 0 auto;
   margin-top: 2rem;
   flex-wrap: wrap;
-  justify-content: space-between;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .Gig_Frames{
@@ -58,52 +57,29 @@ html, body{
   height: 90%;
   width: 90%;
   box-sizing: border-box;
-  /* border: 1px dashed green; */
 }
 
 .Gig_Previews{
   background-color: rgba(0,0,0,0.2); 
   --Border_Radius_Factor: 0.03;
   border-radius: calc(var(--Border_Radius_Factor) * var(--Tile_Width));
-  --Shadow_Height_1: 0.02;
+  --Shadow_Height_1: 0.01;
   --Shadow_Height_2: 0.01;
   --Shadow_Blur_1: 0.02;
-  --Shadow_Blur_2: 0.01;
+  --Shadow_Blur_2: 0.05;
   --Shadow_Spread_1: 0.005;
   --Shadow_Spread_2: 0.00;
   box-shadow: inset 0 calc(var(--Shadow_Height_1)*var(--Tile_Width)) calc(var(--Shadow_Blur_1)*var(--Tile_Width)) calc(var(--Shadow_Spread_1)*var(--Tile_Width)) rgba(0,0,0,0.3),
   inset 0 calc(var(--Shadow_Height_2)*var(--Tile_Width)) calc(var(--Shadow_Blur_2)*var(--Tile_Width)) calc(var(--Shadow_Spread_2)*var(--Tile_Width)) rgba(0,0,0,0.3);
-
-}
-
-.Gig_Descriptions{
-  position: relative;
-  font-family: Arial;
-  text-decoration: none;
-  font-weight: bold;
-  /* padding: 0.8rem 0.5rem 0.8rem 0.5rem; */
-  box-sizing: border-box;
-  background: linear-gradient(180deg, #B1F2D5 -50%, #86BEEE 150%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgba(255,255,255,0.5);
-}
-
-.Gig_Previews{
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 0.8rem;
 }
-
 
 #Gig_1 .Gig_Previews{
   background-image: url('./Assets/Icon Design.webp');
 }
-
 
 #Gig_2 .Gig_Previews{
   background-image: url('./Assets/Web_Apps.png');
@@ -113,18 +89,33 @@ html, body{
   background-image: url('./Assets/Portfolio Sites.webp');
 }
 
+.Gig_Descriptions{
+  position: relative;
+  font-family: Arial;
+  text-decoration: none;
+  font-weight: bold;
+  box-sizing: border-box;
+  background: linear-gradient(180deg, #B1F2D5 -50%, #86BEEE 150%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(255,255,255,0.5);
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 
 .Button_Containers{
   display: grid;
   grid-gap: 4.5%;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr;
-  /* border: 1px dashed grey; */
 }
 
 .Buttons_Links{
-  --Border_Radius_Factor: 0.03;
-  border-radius: calc(var(--Border_Radius_Factor) * var(--Tile_Width));
   border: none;
   font-size: 1rem;
   font-family: Arial;
@@ -132,6 +123,35 @@ html, body{
   background-color: #070D20;
   color: #8492AF;
   font-weight: bold;
+  --Text_Shadow_X: 0rem;
+  --Text_Shadow_Y: 0.2rem;
+  --Text_Shadow_Blur: 0.2rem;
+  text-shadow: var(--Text_Shadow_X) var(--Text_Shadow_Y) var(--Text_Shadow_Blur) rgba(0,0,0,0.2);
+  box-shadow: 0 0.4rem 0.5rem 0.1rem rgba(0,0,0,0.1),
+  inset 0 0.2rem 0rem 0.1rem rgba(255,255,255,0.15);
+  pointer-events: all;
+  transition: 0.07s;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.Button_Containers .Buttons_Links:nth-child(1){
+  --Border_Radius_Factor: 0.03;
+  border-radius: 0.8rem;
+  background-color: rgba(248, 144, 19, 1);
+  color: white;
+}
+
+.Button_Containers .Buttons_Links:nth-child(2){
+  --Border_Radius_Factor: 1000;
+  border-radius: calc(var(--Border_Radius_Factor) * var(--Tile_Width));
+  background-color: rgba(24, 191, 116, 1);
+  color: white;
+}
+
+.Buttons_Links:hover{
+  transform: scale(1.05);
 }
 
 
