--- a/Stylesheets_Design_My_Compass/Navigation_Bar.css
+++ b/Stylesheets_Design_My_Compass/Navigation_Bar.css
@@ -32,44 +32,35 @@
   z-index: 99;
 }
 
-.Menu_Expandable_Tray{
-  /* position: absolute;
-  height: 20rem;
-  width: 20rem;
-  border-radius: 0 0 1000rem 0;
-  background-color: #070D20;
-  background-color: white;
-  transition: 0.3s ease;
-  transform: translateX(-20rem) translateY(-20rem);
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none; */
-}
-
 .Expand_Overlay{
   transform: translateX(0rem) translateY(0rem);
 }
 
+:root{
+  --Moon_Height: 5.2rem;
+}
+
+
 .Menu_Button{
-  /* position: fixed; */
   position: relative;
   display: grid;
   grid-gap: 0.5rem;
   grid-template-rows: repeat(3,1fr);
   grid-template-columns: 1fr;
   position: absolute;
-  height: 5rem; 
-  width: 5rem; 
+  height: var(--Moon_Height); 
+  width: var(--Moon_Height); 
   box-sizing: border-box;
   padding: 1.3rem 1.1rem 1.3rem 1.1rem;
   pointer-events: all;
-  background-color: rgb(245,245,245);
+  background-color: rgb(225,225,225);
   border-radius: 10000rem;
   z-index: 100;
-  margin-top: 3rem;
+  margin-top: 3.8rem;
   transform: rotate(0deg);
   transition: 0.5s;
   transform-origin: center;
+  transform: rotate(-97deg) scale(1.5);
 }
 
 .Rotate_Menu_Button{
@@ -81,28 +72,28 @@
 }
 
 @keyframes Expand{
-  0%{height: 5rem; transform: rotate(0deg);}
-  20%{height: 5rem; transform: rotate(90deg);}
-  75%{height: 5rem; transform: rotate(90deg);}
-  90%{height: calc(3.1*var(--Tile_Width)); transform: rotate(90deg);}
-  94%{height: calc(2.95*var(--Tile_Width)); transform: rotate(90deg);}
-  98%{height: calc(3.02*var(--Tile_Width)); transform: rotate(90deg);}
-  100%{height: calc(3*var(--Tile_Width)); transform: rotate(90deg);}
+  0%{width: var(--Moon_Height); transform: rotate(-97deg) scale(1.5);}
+  20%{width: var(--Moon_Height); transform: rotate(0deg) scale(1);}
+  75%{width: var(--Moon_Height); transform: rotate(0deg) scale(1);}
+  90%{width: calc(3.1*var(--Tile_Width)); transform: rotate(0deg) scale(1);}
+  94%{width: calc(2.95*var(--Tile_Width)); transform: rotate(0deg) scale(1);}
+  98%{width: calc(3.02*var(--Tile_Width)); transform: rotate(0deg) scale(1);}
+  100%{width: calc(3*var(--Tile_Width)); transform: rotate(0deg) scale(1);}
 }
 
 @keyframes Shrink{
-  0%{height: calc(3*var(--Tile_Width)); transform: rotate(90deg);}
-  35%{height: 5rem; transform: rotate(90deg);}
-  80%{height: 5rem; transform: rotate(90deg);}
-  100%{height: 5rem; transform: rotate(0deg);}
+  0%{width: calc(3*var(--Tile_Width)); transform: rotate(0deg);}
+  35%{width: var(--Moon_Height); transform: rotate(0deg);}
+  80%{width: var(--Moon_Height); transform: rotate(0deg);}
+  100%{width: var(--Moon_Height); transform: rotate(-97deg) scale(1.5);}
 }
 
 .Circle_Mask{
   position: absolute;
   border-radius: 100%;
   --Diameter: 3.5rem;
-  top: calc(50% - var(--Diameter)/2);
-  left: calc(105% - var(--Diameter));
+  left: calc(50% - var(--Diameter)/2);
+  top: calc(105% - var(--Diameter));
   height: var(--Diameter);
   width: var(--Diameter);
   background-color: #070D20;
@@ -126,15 +117,61 @@
   border-radius: 100000rem;
 }
 
-#Menu_Frame{
-  
-  
+.Fade_In_Menu{
+  animation: Fade_In_Menu_Keyframes 1s ease forwards;
 }
 
+.Fade_Out_Menu{
+  animation: Fade_Out_Menu_Keyframes 1s ease forwards;
+}
 
+@keyframes Fade_In_Menu_Keyframes {
+  0%{filter: opacity(0);}
+  50%{filter: opacity(0);}
+  100%{filter: opacity(1);}
+}
 
+@keyframes Fade_Out_Menu_Keyframes {
+  0%{filter: opacity(1);}
+  10%{filter: opacity(0);}
+  100%{filter: opacity(0);}
+}
 
+#Menu_Frame{
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(6,1fr);
+  grid-gap: 0.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border: 0.2rem solid rgb(225,225,225);
+  box-sizing: border-box;
+  border-radius: 1000rem;
+  filter: opacity(0);
+  overflow: hidden;
+  font-family: Arial;
+  font-weight: bold;
+}
 
+.Menu_Links{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* background-color: red; */
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  color: rgb(21,32,64);
+  --Minimum_Window_Dimension: 2vw;
+  --Minimum_Font_Size: max(var(--Minimum_Window_Dimension),0.2rem);
+  --Maximum_Font_Size: min(var(--Minimum_Font_Size),1.2rem);
+  font-size: var(--Maximum_Font_Size);
+}
 
 
 
