--- a/Stylesheets_Design_My_Compass/Window.css
+++ b/Stylesheets_Design_My_Compass/Window.css
@@ -87,15 +87,15 @@ html, body{
 }
 
 #Gig_1 .Gig_Previews{
-  background-image: url('./Assets/Icon Design.webp');
+  /* background-image: url('./Assets/Icon Design.webp'); */
 }
 
 #Gig_2 .Gig_Previews{
-  background-image: url('./Assets/Web_Apps.png');
+  /* background-image: url('./Assets/Web_Apps.png'); */
 }
 
 #Gig_3 .Gig_Previews{
-  background-image: url('./Assets/Portfolio Sites.webp');
+  /* background-image: url('./Assets/Portfolio Sites.webp'); */
 }
 
 .Gig_Descriptions{
