--- a/Stylesheets_Design_My_Compass/Window.css
+++ b/Stylesheets_Design_My_Compass/Window.css
@@ -19,6 +19,15 @@ html, body{
   cursor: default;
 }
 
+#Background_Body{
+  position: fixed;
+  top: -50vh;
+  height: 200vh;
+  width: 100vw;
+  /* background-color: red; */
+  z-index: 0;
+}
+
 
 #Main_Title{
   display: block;
@@ -39,7 +48,7 @@ html, body{
   margin-top: 3rem;
   padding: 2rem;
   box-sizing: border-box;
-  pointer-events: none;
+  /* pointer-events: none; */
   text-decoration: none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -138,7 +147,7 @@ html, body{
   text-shadow: var(--Text_Shadow_X) var(--Text_Shadow_Y) var(--Text_Shadow_Blur) rgba(0,0,0,0.2);
   box-shadow: 0 0.4rem 0.5rem 0.1rem rgba(0,0,0,0.1),
   inset 0 0.2rem 0rem 0.1rem rgba(255,255,255,0.15);
-  pointer-events: all;
+  /* pointer-events: all; */
   transition: 0.s;
   -webkit-user-select: none;
   -ms-user-select: none;
