--- a/Stylesheets_Design_My_Compass/Navigation_Bar.css
+++ b/Stylesheets_Design_My_Compass/Navigation_Bar.css
@@ -1,6 +1,14 @@
 
 #Hover_Highlight{
-    
+  position: absolute;
+  height: 100%;
+  width: calc(100% / 6);
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 100000rem;
+  box-sizing: border-box; 
+  border: 0.3rem solid rgb(225,225,225);
+  transition: 0.2s ease;
+  filter: opacity(0);
 }
 
 #Navigation_Bar{
@@ -17,7 +25,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 2rem;
-  background-color: red;
+  background-color: rgba(0,0,0,0);
   height: 1rem;
   width: 1rem;
   left: calc(50% - 0.5rem);
@@ -27,6 +35,7 @@
   filter: opacity(0);
   animation: Fade_In_Dynamic_Menu 2s forwards;
   animation-delay: 2s;
+  
 }
 
 :root{
@@ -163,10 +172,10 @@
   grid-template-rows: 1fr;
   grid-template-columns: repeat(6,1fr);
   grid-gap: 0.2rem;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: calc(100%);
+  width: calc(100%);
   border: 0.2rem solid rgb(225,225,225);
   box-sizing: border-box;
   border-radius: 1000rem;
@@ -191,6 +200,7 @@
   --Maximum_Font_Size: min(var(--Minimum_Font_Size),1.2rem);
   font-size: var(--Maximum_Font_Size);
   border-radius: 1000rem;
+  z-index: 5;
 }
 
 
