--- a/Stylesheets_Design_My_Compass/Window.css
+++ b/Stylesheets_Design_My_Compass/Window.css
@@ -21,12 +21,12 @@ html, body{
 
 #Stagnant_Panel{
   position: fixed;
-  height: 100vh;
+  top: -50vh;
+  height: 200vh;
   width: 100vw;
   background-color: #070D20;
   z-index: -50;
 }
-
 
 #Background_Body{
   position: fixed;
