--- a/Stylesheets_Design_My_Compass/Example_Sections.css
+++ b/Stylesheets_Design_My_Compass/Example_Sections.css
@@ -1,26 +1,25 @@
 
 .Example_Containers{
-  height: 45rem;
+  /* height: 45rem; */
   width: 100%;
-  border: 1px dashed white;
+  /* border: 1px dashed white; */
   box-sizing: border-box;
 }
 
 #Example_Container_1{
   position: relative;
-
-  margin-top: 10rem;
-  
 }
 
 #Logo_And_Icon_Design_Hero_Image{
-  position: absolute;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+  position: relative;
   --Height: calc(var(--Width) * 1.3);
   --Width: min(80vw,30rem);  
   height: var(--Height);
+  width: var(--Width);
   top: calc(50% - var(--Height)/2);
   left: calc(50% - var(--Width)/2);
-  width: var(--Width);
   background-color: white;
   background-image: url("../Stylesheets_Design_My_Compass/Assets/Icon_Showcase.png");
   background-size: cover;
@@ -37,3 +36,124 @@
   --Maximum_Size: 24rem;
   --Minimum_Size: 22rem;
 }
+
+#Example_Container_2{
+  position: relative;
+}
+
+.Titles{
+  position: relative;
+  margin-top: 10rem;
+  color: white;
+  font-family: Arial;
+  font-weight: bold;
+  width: 100%;
+  background: linear-gradient(30deg, #B1F2D5 0%, #86BEEE 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  --Minimum_Window_Dimension: 10vw;
+  --Minimum_Font_Size: max(var(--Minimum_Window_Dimension),40px);
+  --Maximum_Font_Size: min(var(--Minimum_Font_Size),100px);
+  font-size: calc(0.7*var(--Maximum_Font_Size));  
+  text-align: center;
+  z-index: 10;
+}
+
+#Desktop_App_Development_Hero_Image_1{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  position: relative;
+  --Height: calc(var(--Width)/(1200/728));
+  --Width: min(90vw,calc(40rem * (1200/728))); 
+  height: var(--Height);
+  width: var(--Width);
+  left: calc(50% - var(--Width)/2);
+  background-image: url("../Stylesheets_Design_My_Compass/Assets/Hue_Changer_App_Preview.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: saturate(1.2);
+}
+
+#Vertical_Shader_App_Hero_Image{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(180deg, #070D20 0%, rgba(7, 13, 32, 0) 30%, rgba(7, 13, 32, 0) 80%, #070D20 100%);
+}
+
+#Horizontal_Shader_App_Hero_Image{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(90deg, #070D20 0%, rgba(7, 13, 32, 0) 30%, rgba(7, 13, 32, 0) 70%, #070D20 100%);
+}
+
+#App_Development_Slogan{
+  margin-top: 2rem;
+  font-size: calc(0.3*var(--Maximum_Font_Size));  
+}
+
+
+#Desktop_App_Development_Hero_Image_2{
+  margin-top: 2rem;
+  margin-bottom: 5rem;
+  position: relative;
+  --Height: calc(var(--Width)/(1200/728) * 0.72);
+  --Width: min(90vw,calc(40rem * (1200/728))); 
+  height: var(--Height);
+  width: var(--Width);
+  top: calc(50% - var(--Height)/2);
+  left: calc(50% - var(--Width)/2);
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-rows: 2.2fr 3fr;
+  grid-template-columns: 1.2fr 3fr;
+}
+
+.App_Display_Tiles > div{
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+#App_Display_1 > div{
+  background-image: url("../Stylesheets_Design_My_Compass/Assets/Folder_Painter.png");
+  filter: saturate(1.15);
+}
+
+#App_Display_2{
+  grid-row: 1 / span 2;
+  grid-column: 2 / span 1;
+}
+
+#App_Display_2 > div{
+  background-image: url("../Stylesheets_Design_My_Compass/Assets/GPA_Grapher.png");
+  filter: saturate(1.15);
+}
+
+#App_Display_3 > div{
+  background-image: url("../Stylesheets_Design_My_Compass/Assets/Habit_Square.png");
+  filter: saturate(2);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
