--- a/Stylesheets_Design_My_Compass/Window.css
+++ b/Stylesheets_Design_My_Compass/Window.css
@@ -112,6 +112,7 @@ html, body{
   width: var(--Width);
   margin: 0 auto;
   margin-top: 0.5rem;
+  margin-bottom: -5rem;
   flex-wrap: wrap;
   justify-content: center;
 }
