--- a/Stylesheets_Design_My_Compass/Gig_Tiles.css
+++ b/Stylesheets_Design_My_Compass/Gig_Tiles.css
@@ -35,4 +35,13 @@
   z-index: 50;
 }
 
-
+.Button_Pressed{
+    animation: Squeeze_Keyframes 0.15s ease-out forwards;
+  }
+  
+  @keyframes Squeeze_Keyframes{
+    0%{transform: translateY(0px) scale(1);}
+    50%{transform: translateY(0px) scale(1.1);}
+    100%{transform: translateY(0px) scale(1);}
+  }
+  
