--- a/Stylesheets_Design_My_Compass/Gig_Tiles.css
+++ b/Stylesheets_Design_My_Compass/Gig_Tiles.css
@@ -30,6 +30,13 @@
   border-radius: 0.8rem;
 }
 
+@media only screen and (max-device-width: 640px) {
+.Gig_Tiles{
+  height: 90vw;
+  width: 90vw;
+}
+}
+
 #Gig_3{
   position: relative;
   z-index: 50;
