--- a/Stylesheets_Design_My_Compass/Gig_Tiles.css
+++ b/Stylesheets_Design_My_Compass/Gig_Tiles.css
@@ -30,11 +30,25 @@
   border-radius: 0.8rem;
 }
 
-@media only screen and (max-device-width: 640px) {
+@media screen and (orientation:portrait){
 .Gig_Tiles{
-  height: 90vw;
-  width: 90vw;
+  max-height: none;
+  max-width: none;
+  box-shadow: none;
+  font-size: 3vw;
+  border-radius: 3vw;
 }
+
+.Button_Links{
+  font-size: 3vw;
+}
+   
+.Button_Containers .Button_Links:nth-child(1){
+  --Border_Radius_Factor: 0.03;
+  border-radius: 3vw;
+  background-color: rgba(248, 144, 19, 1);
+  color: white;
+}         
 }
 
 #Gig_3{
