--- a/Stylesheets_Design_My_Compass/Gig_Tiles.css
+++ b/Stylesheets_Design_My_Compass/Gig_Tiles.css
@@ -30,6 +30,12 @@
   border-radius: 0.8rem;
 }
 
+@media screen and (orientation:landscape){
+  .Gig_Tiles{
+    box-shadow: none;
+  }
+}
+
 @media screen and (orientation:portrait){
 .Gig_Tiles{
   max-height: none;
